fix (HSK-456) prevent font size changes caused by orientation change on mobile safari

--- a/source/css/scss/generic/_reset.scss
+++ b/source/css/scss/generic/_reset.scss
@@ -18,6 +18,10 @@ header, footer, nav, section, article, hgroup, figure {
 	display: block;
 }
 
+html {
+  text-size-adjust: 100%;
+}
+
 body {
 	height: 100%;
 	height: 100vh;
